[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmwise-sdk"
version = "0.1.0"
description = "Lightweight Python SDK for the LLMWise multi-model API (chat, compare, blend, judge, failover)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LLMWise" }]
keywords = ["llm", "openai", "anthropic", "gateway", "routing", "failover", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://llmwise.ai"
Repository = "https://github.com/researchaudio/modelmesh"
Documentation = "https://llmwise.ai/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

