[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmwise"
version = "0.1.2"
description = "Lightweight Python SDK for the LLMWise multi-model API (chat, compare, blend, judge, failover)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "LLMWise" }]
keywords = ["llm", "openai", "anthropic", "gateway", "routing", "failover", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://llmwise.ai"
Repository = "https://github.com/LLMWise-AI/llmwise-python-sdk"
Documentation = "https://llmwise.ai/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmwise = ["py.typed"]
